# pattern

./: README.md  cookiecutter.json  pyproject.toml
docs/: cli.md  configuration.md  github.md  index.md  license.md  pypi.md  testing.md
hooks/: post_gen_project.py
tests/: config.py  replay-min.json  replay.json
{{cookiecutter.__clean_name}}/: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
